# memo

./: Cargo.toml
abstract/: Cargo.toml
abstract/src/: lib.rs  links.rs  setting.rs  words.rs
api_server/: Cargo.toml
api_server/src/: lib.rs  link.rs  server.rs
cli-file/: Cargo.toml
cli-file/src/: main.rs
cli_file/: Cargo.toml
domain/: Cargo.toml  doc.md
domain/src/: article.rs  content.rs  lib.rs  link.rs  links.rs  repository.rs  setting.rs  shared.rs  temp.rs  word.rs
infra/direct_file_json/src/: lib.rs  link.rs
infra/in_memory/: Cargo.toml
infra/in_memory/src/: lib.rs
infra_file/: Cargo.toml
infra_file/src/: config.rs  lib.rs  links.rs
infra_testmemory/: Cargo.toml
infra_testmemory/src/: lib.rs
integrate/local_front_server/src/: main.rs
integrate/local_gui/: Cargo.toml
integrate/local_gui/src/: main.rs
integrate/local_gui_dioxus/: Cargo.toml
integrate/local_gui_dioxus/src/: main.rs
lib-file/: Cargo.toml
lib-file/src/: lib.rs  links.rs
local_front_server/: Cargo.toml
local_front_server/src/: main.rs
local_front_server/static/: connect.js  index.html
server-file/: Cargo.toml
server-file/src/: api.rs  main.rs
ui/dioxus_test/: Cargo.toml
ui/dioxus_test/src/: component.rs
ui/gui/: Cargo.toml
ui/gui/src/: app.rs  data.rs  lib.rs  view.rs
