[package]
name = "ownlinkmemo_api_server"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
ownlinkmemo_domain = { path = "../domain"}
ownlinkmemo_infra_testmemory = { path = "../infra_testmemory"}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
askama = "0.11.1"
actix-web = "4.0.1"
