[package]
name = "local_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ownlinkmemo_domain = { path = "../domain" }
ownlinkmemo_infra_testmemory = { path = "../infra_testmemory" }
ownlinkmemo_api_server = { path = "../api_server" }
actix-web = "4.0.1"