[package]
name = "ownlinkmemo_server_file"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
ownlinkmemo_data = { path = "../abstract"}
ownlinkmemo_lib_file = { path = "../lib-file"}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"
askama = "0.11.1"
actix-web = "4.0.1"
